--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,10 @@ spring:
     enabled: true
     locations: classpath:db/migration
 
+  graphql:
+    graphiql:
+      enabled: true
+
 logging:
   level:
     org.hibernate.SQL: DEBUG
