--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.grpc:spring-grpc-server-web-spring-boot-starter'
 	implementation 'org.flywaydb:flyway-core'
@@ -43,6 +44,10 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'io.reactivex.rxjava3:rxjava:3.1.10'
 	implementation 'io.grpc:grpc-services'
+	implementation 'org.hibernate.orm:hibernate-jcache:6.5.2.Final'
+	implementation 'org.ehcache:ehcache:3.10.8'
+	implementation 'io.micrometer:micrometer-registry-prometheus'
+	implementation 'net.logstash.logback:logstash-logback-encoder:8.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
